Fix validation notice group spacing

--- a/css/compat/themes/compat-konte-3111-beta-1.css
+++ b/css/compat/themes/compat-konte-3111-beta-1.css
@@ -1,3 +1,7 @@
+body.theme-konte div.woocommerce .woocommerce-NoticeGroup .woocommerce-error {
+  margin-bottom: 15px;
+}
+
 body.theme-konte .ts-control {
   border-bottom: 2px solid #e3e7e8;
   transition: 0.4s;
